fix: Fix Title Wrap

--- a/src/components/BookMenu/index.module.scss
+++ b/src/components/BookMenu/index.module.scss
@@ -13,6 +13,7 @@
 
 .title {
   padding: $base-distance / 4;
+  word-break: break-all;
 }
 
 .active {
