--- a/src/themes/utils.scss
+++ b/src/themes/utils.scss
@@ -1,6 +1,6 @@
 $base-distance: 20px;
-$primary-color: #00f;
-$border-color:#ccc;
-$menu-width:300px;
-$main-content-color:#333;
-$sub-content-color:#ccc;
+$primary-color: #0fd2fd;
+$border-color: #ccc;
+$menu-width: 300px;
+$main-content-color: #333;
+$sub-content-color: #ccc;
